--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ out/
 # Gradle files
 .gradle/
 build/
+/build
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -35,6 +36,7 @@ proguard/
 
 # Android Studio captures folder
 captures/
+/captures
 
 # IntelliJ
 *.iml
