--- a/versions.gradle
+++ b/versions.gradle
@@ -22,5 +22,10 @@ ext {
     ssp_version = "1.0.6"
     coil_version = "1.3.2"
 
-    
+    mockk_version = "1.11.0"
+    arch_testing_version = "2.1.0"
+    espresso_version = "3.4.0"
+    junit_version = "4.13.2"
+    core_testing_version = "1.1.1"
+    android_text_ext_version = "1.1.3"
 }
